# type_tester

./: CMakeLists.txt  README.md  main.cpp  words.txt
src/: app.cpp  app.hpp  typeTrainer.cpp  typeTrainer.hpp  type_trainer.cpp  type_trainer.hpp
